--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+video {
+    /* -webkit-transform: scaleX(-0.5); */
+    transform: scaleX(-0.5) scaleY(0.5);
+    /* height: 100%;
+    width: 100%; */
+    /* object-fit: cover; */
+  }
